--- a/less/landing-header.less
+++ b/less/landing-header.less
@@ -6,6 +6,7 @@ header {
 
     @media @phone {
         background: @ctaBtnColor;
+        min-height: 50vh;
     }
     
     nav {
@@ -57,6 +58,7 @@ header {
 
         .headerTextContainer {
             width: 50%;
+            height: auto;
             color: #EEE;
             display: flex;
             flex-direction: column;
@@ -72,7 +74,7 @@ header {
             }
 
             h1 {
-                padding: 2.5%;
+                padding-top: 1%;
                 font-size: 3rem;
             }
 
